--- a/server/package.json
+++ b/server/package.json
@@ -1,4 +1,3 @@
-
 {
   "name": "greenbits-server",
   "version": "1.0.0",
@@ -11,14 +10,18 @@
     "data:destroy": "node utils/seeder.js -d"
   },
   "dependencies": {
+    "axios": "^1.9.0",
     "bcryptjs": "^2.4.3",
+    "cloudinary": "^2.6.1",
     "cors": "^2.8.5",
-    "dotenv": "^16.4.5",
+    "dotenv": "^16.5.0",
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.2.3"
+    "mongoose": "^8.2.3",
+    "multer": "^2.0.1"
   },
   "devDependencies": {
+    "@types/express": "^5.0.2",
     "nodemon": "^3.1.0"
   }
 }
