--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 # Backend API Configuration
-VITE_BACKEND_URL=http://localhost:5000/api 
+VITE_BACKEND_URL=https://gamecity-backend-i2sy.onrender.com/api 
 
 # M-Pesa Sandbox Configuration
 VITE_MPESA_BASE_URL=https://sandbox.safaricom.co.ke
