--- a/server/.env
+++ b/server/.env
@@ -33,4 +33,9 @@ MPESA_CONFIRMATION_URL=https://mydomain.com/confirmation
 # CORS Configuration
 ALLOWED_ORIGINS=https://game-city-one.vercel.app,http://localhost:5173,http://localhost:8080
 
+REDIS_HOST=redis-14531.c341.af-south-1-1.ec2.redns.redis-cloud.com
+REDIS_PORT=14531
+REDIS_USERNAME=default
+REDIS_PASSWORD=oqrpY5AUjKEXKvBF4ZfBYweaxJhrsGzN
+
 
