--- a/server/.env.example
+++ b/server/.env.example
@@ -1,9 +1,36 @@
-
 # This server is no longer used
 # The application now works entirely with local storage
 
-PORT=5000
-MONGODB_URI=mongodb://localhost:27017/gamecity
-JWT_SECRET=your_jwt_secret_key
+# Server Configuration
+PORT=5001
 NODE_ENV=development
+
+# MongoDB Configuration
+MONGODB_URI=your_mongodb_uri
+
+# Redis Configuration
+REDIS_HOST=your_redis_host
+REDIS_PORT=your_redis_port
+REDIS_USERNAME=your_redis_username
+REDIS_PASSWORD=your_redis_password
+
+# JWT Configuration
+JWT_SECRET=your_jwt_secret
+
+# CORS Configuration
+ALLOWED_ORIGINS=http://localhost:5173,http://localhost:8080
+
+# Cloudinary Configuration
+CLOUDINARY_CLOUD_NAME=your_cloud_name
+CLOUDINARY_API_KEY=your_api_key
+CLOUDINARY_API_SECRET=your_api_secret
+
+# MPESA Configuration
+MPESA_BASE_URL=your_mpesa_base_url
+MPESA_BUSINESS_SHORT_CODE=your_shortcode
+MPESA_CONSUMER_KEY=your_consumer_key
+MPESA_CONSUMER_SECRET=your_consumer_secret
+MPESA_PASSKEY=your_passkey
+MPESA_VALIDATION_URL=your_validation_url
+MPESA_CONFIRMATION_URL=your_confirmation_url
 
