asdded vercel.json for /password-reset to work

--- a/server/.env
+++ b/server/.env
@@ -17,7 +17,7 @@ CLOUDINARY_API_KEY=899494748913444
 CLOUDINARY_API_SECRET=782xiGrHav6TLKA6piFFM_MeqrU
 
 BACKEND_URL=http://localhost:3000
-FRONTEND_URL=http://localhost:8080
+FRONTEND_URL=https://game-city-one.vercel.app
 
 # M-Pesa Configuration
 MPESA_BASE_URL=https://sandbox.safaricom.co.ke
