Added New Color Scheme to the whole Site

--- a/.env
+++ b/.env
@@ -1,5 +1,6 @@
 # Backend API Configuration
 VITE_BACKEND_URL=http://localhost:5000/api
+MONGODB_URI=mongodb+srv://gamecity-admin:gamecity-admin@cluster0.em5cg.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 
 
 # M-Pesa Sandbox Configuration
