changed backend url from local env to backend in render

--- a/server/.env
+++ b/server/.env
@@ -16,7 +16,7 @@ CLOUDINARY_CLOUD_NAME=dq3jxutxg
 CLOUDINARY_API_KEY=899494748913444
 CLOUDINARY_API_SECRET=782xiGrHav6TLKA6piFFM_MeqrU
 
-BACKEND_URL=http://localhost:3000
+BACKEND_URL=https://gamecity-backend-i2sy.onrender.com
 FRONTEND_URL=https://game-city-one.vercel.app
 
 # M-Pesa Configuration
