Changed background Images of shop by category and fixed footer links

--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 # Backend API Configuration
-VITE_BACKEND_URL=https://gamecity-backend-i2sy.onrender.com
+VITE_BACKEND_URL=http://localhost:5000/api
 MONGODB_URI=mongodb+srv://gamecity-admin:gamecity-admin@cluster0.em5cg.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
 
 
