--- a/.env
+++ b/.env
@@ -21,3 +21,5 @@ VITE_MPESA_API_URL=http://localhost:5000/api/mpesa
 # - Use phone number 254708374149 for successful transactions
 # - Use amount between 10-150000
 # - Use the default test credentials above 
+
+VITE_API_URL=https://gamecity-backend-i2sy.onrender.com/api 
