added products specifications, exVat, add cpu cooling

--- a/.env
+++ b/.env
@@ -22,4 +22,4 @@ VITE_MPESA_API_URL=http://localhost:5000/api/mpesa
 # - Use amount between 10-150000
 # - Use the default test credentials above 
 
-VITE_API_URL=https://gamecity-backend-i2sy.onrender.com/api 
+VITE_API_URL=http://localhost:5000/api
