--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 # Backend API Configuration
-VITE_BACKEND_URL=http://localhost:5000/api
-MONGODB_URI=mongodb+srv://gamecity-admin:gamecity-admin@cluster0.em5cg.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+VITE_BACKEND_URL=http://localhost:5001/api
+MONGODB_URI=mongodb+srv://gamecity-admin:gamecity-admin@cluster0.em5cg.mongodb.net/gamecity-store?retryWrites=true&w=majority&appName=Cluster0
 
 
 # M-Pesa Sandbox Configuration
@@ -15,11 +15,11 @@ VITE_MPESA_VALIDATION_URL=https://mydomain.com/confirmation
 VITE_MPESA_CONFIRMATION_URL=https://mydomain.com/validation
 
 # Frontend Configuration
-VITE_MPESA_API_URL=http://localhost:5000/api/mpesa
+VITE_MPESA_API_URL=http://localhost:5001/api/mpesa
 
 # Note: For sandbox testing:
 # - Use phone number 254708374149 for successful transactions
 # - Use amount between 10-150000
 # - Use the default test credentials above 
 
-VITE_API_URL=http://localhost:5000/api
+VITE_API_URL=http://localhost:5001/api
