forget password link reset

--- a/server/.env
+++ b/server/.env
@@ -1,5 +1,5 @@
-# Production Environment Configuration
-# For local development, use .env.development instead
+# Server Configuration
+# MongoDB connection with proper database name
 
 PORT=5000
 MONGODB_URI=mongodb+srv://gamecity-admin:gamecity-admin@cluster0.em5cg.mongodb.net/gamecity-store?retryWrites=true&w=majority&appName=Cluster0
