--- a/server/package.json
+++ b/server/package.json
@@ -5,9 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
-    "dev": "nodemon index.js",
-    "dev:local": "nodemon dev-start.js",
-    "dev:prod": "NODE_ENV=production node index.js"
+    "dev": "nodemon index.js"
   },
   "dependencies": {
     "axios": "^1.9.0",
