--- a/server/.env.example
+++ b/server/.env.example
@@ -1,36 +1,42 @@
-# This server is no longer used
-# The application now works entirely with local storage
-
 # Server Configuration
-PORT=5001
+# MongoDB connection with proper database name
+
+PORT=5000
+MONGODB_URI=mongodb+srv://username:password@cluster.mongodb.net/database-name?retryWrites=true&w=majority
+MONGODB_DATABASE=your-database-name
+JWT_SECRET=your-jwt-secret-key-here
+JWT_EXPIRES_IN=7d
 NODE_ENV=development
 
-# MongoDB Configuration
-MONGODB_URI=your_mongodb_uri
+# Email Configuration (Gmail App Password)
+EMAIL_USER=your-email@gmail.com
+EMAIL_PASS=your-app-password-here
 
-# Redis Configuration
-REDIS_HOST=your_redis_host
-REDIS_PORT=your_redis_port
-REDIS_USERNAME=your_redis_username
-REDIS_PASSWORD=your_redis_password
+# Cloudinary Configuration
+CLOUDINARY_CLOUD_NAME=your-cloud-name
+CLOUDINARY_API_KEY=your-api-key
+CLOUDINARY_API_SECRET=your-api-secret
 
-# JWT Configuration
-JWT_SECRET=your_jwt_secret
+# Application URLs
+BACKEND_URL=http://localhost:5000
+FRONTEND_URL=http://localhost:5173
+
+# M-Pesa Configuration (Sandbox)
+MPESA_BASE_URL=https://sandbox.safaricom.co.ke
+MPESA_CONSUMER_KEY=your-consumer-key
+MPESA_CONSUMER_SECRET=your-consumer-secret
+MPESA_BUSINESS_SHORT_CODE=your-short-code
+MPESA_PASSKEY=your-passkey
+
+# M-Pesa Callback URLs
+MPESA_VALIDATION_URL=https://yourdomain.com/validation
+MPESA_CONFIRMATION_URL=https://yourdomain.com/confirmation
 
 # CORS Configuration
 ALLOWED_ORIGINS=http://localhost:5173,http://localhost:8080
 
-# Cloudinary Configuration
-CLOUDINARY_CLOUD_NAME=your_cloud_name
-CLOUDINARY_API_KEY=your_api_key
-CLOUDINARY_API_SECRET=your_api_secret
-
-# MPESA Configuration
-MPESA_BASE_URL=your_mpesa_base_url
-MPESA_BUSINESS_SHORT_CODE=your_shortcode
-MPESA_CONSUMER_KEY=your_consumer_key
-MPESA_CONSUMER_SECRET=your_consumer_secret
-MPESA_PASSKEY=your_passkey
-MPESA_VALIDATION_URL=your_validation_url
-MPESA_CONFIRMATION_URL=your_confirmation_url
-
+# Redis Configuration
+REDIS_HOST=your-redis-host
+REDIS_PORT=your-redis-port
+REDIS_USERNAME=your-redis-username
+REDIS_PASSWORD=your-redis-password
