--- a/.gitignore
+++ b/.gitignore
@@ -1,21 +1,40 @@
-# Logs
-logs
-*.log
+# Dependencies
+node_modules/
+*/node_modules/
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
-node_modules
-dist
-dist-ssr
+# Build outputs
+dist/
+dist-ssr/
+build/
 *.local
+
+# Logs
+logs/
+*.log
+
+# Environment variable files
+.env
+.env.*
+.env.local
+.env.development
+.env.test
+.env.production
+server/.env
+server/.env.*
+server/.env.local
+server/.env.development
+server/.env.test
+server/.env.production
 
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
-.idea
+.idea/
 .DS_Store
 *.suo
 *.ntvs*
@@ -23,9 +42,12 @@ dist-ssr
 *.sln
 *.sw?
 
-# Environment variable files
-.env
-.env.*
-server/.env
-server/.env.*
+# OS generated files
+Thumbs.db
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
 
