--- a/package.json
+++ b/package.json
@@ -83,6 +83,7 @@
     "terser": "^5.44.0",
     "typescript": "^5.5.3",
     "typescript-eslint": "^8.0.1",
-    "vite": "^6.3.5"
+    "vite": "^6.3.5",
+    "web-vitals": "^5.1.0"
   }
 }
