--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,28 @@
 {
+  "redirects": [
+    {
+      "source": "/:path*",
+      "has": [
+        {
+          "type": "host",
+          "value": "www.gamecityelectronics.com"
+        }
+      ],
+      "destination": "https://www.gamecityelectronics.co.ke/:path*",
+      "permanent": true
+    },
+    {
+      "source": "/:path*",
+      "has": [
+        {
+          "type": "host",
+          "value": "gamecityelectronics.com"
+        }
+      ],
+      "destination": "https://www.gamecityelectronics.co.ke/:path*",
+      "permanent": true
+    }
+  ],
   "rewrites": [
     { "source": "/sitemap.xml", "destination": "/api/sitemap.xml" },
     { "source": "/(.*)", "destination": "/" }
