feat(og): add bot-only OG SSR for /product/:slug and Vercel rewrite

--- a/vercel.json
+++ b/vercel.json
@@ -24,6 +24,13 @@
     }
   ],
   "rewrites": [
+    {
+      "source": "/product/:slug",
+      "has": [
+        { "type": "header", "key": "user-agent", "value": ".*(facebookexternalhit|WhatsApp|Twitterbot|Slackbot|Discordbot|LinkedInBot|TelegramBot).*" }
+      ],
+      "destination": "/api/og-product?slug=:slug"
+    },
     { "source": "/sitemap.xml", "destination": "/api/sitemap.xml" },
     { "source": "/(.*)", "destination": "/" }
   ],
