fix(og): make OG function robust to missing API and switch to JS runtime

--- a/vercel.json
+++ b/vercel.json
@@ -27,7 +27,11 @@
     {
       "source": "/product/:slug",
       "has": [
-        { "type": "header", "key": "user-agent", "value": ".*(facebookexternalhit|WhatsApp|Twitterbot|Slackbot|Discordbot|LinkedInBot|TelegramBot).*" }
+        {
+          "type": "header",
+          "key": "user-agent",
+          "value": ".*(facebookexternalhit|WhatsApp|Twitterbot|Slackbot|Discordbot|LinkedInBot|TelegramBot).*"
+        }
       ],
       "destination": "/api/og-product?slug=:slug"
     },
