--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,7 @@
 {
   "redirects": [
     {
-      "source": "/((?!api).*)",
+      "source": "/(.*)",
       "has": [
         {
           "type": "host",
@@ -12,7 +12,7 @@
       "permanent": true
     },
     {
-      "source": "/((?!api).*)",
+      "source": "/(.*)",
       "has": [
         {
           "type": "host",
@@ -23,7 +23,7 @@
       "permanent": true
     },
     {
-      "source": "/((?!api).*)",
+      "source": "/(.*)",
       "has": [
         {
           "type": "host",
