fixed your cart product desc for mobile & notification

--- a/.env
+++ b/.env
@@ -1,5 +1,6 @@
 # Backend API Configuration
-VITE_BACKEND_URL=http://localhost:5000/api
+VITE_BACKEND_URL=https://gamecity-backend-n8t8.onrender.com/api
+BACKEND_URL=https://gamecity-backend-n8t8.onrender.com/api
 MONGODB_URI=mongodb+srv://gamecity-admin:gamecity-admin@cluster0.em5cg.mongodb.net/gamecity-store?retryWrites=true&w=majority&appName=Cluster0
 
 
@@ -21,5 +22,4 @@ VITE_MPESA_API_URL=http://localhost:5000/api/mpesa
 # - Use phone number 254708374149 for successful transactions
 # - Use amount between 10-150000
 # - Use the default test credentials above 
-
-VITE_API_URL=http://localhost:5000/api
+VITE_API_URL=https://gamecity-backend-n8t8.onrender.com/api
